--- a/components/maintenance/healthclub.jade
+++ b/components/maintenance/healthclub.jade
@@ -102,7 +102,10 @@ template(name='healthclub')
                                         //- .column
                                         //-     +service_small
                                         .column
-                                            a.ui.big.fluid.button(href="/market") market
+                                            a.ui.big.fluid.button(href="/market") 
+                                                .ui.grey.inline.header 
+                                                    i.shop.icon
+                                                    |market (beta)
                                             //- +rental_small
                                         //- .column
                                         //-     +request_small
