--- a/components/request.jade
+++ b/components/request.jade
@@ -163,7 +163,7 @@ template(name='request_time')
 template(name='request_small')
     a.ui.fluid.button(href="/requests")
         .ui.inline.header
-            //- i.hand.holding.heart.grey.icon 
+            i.hand.holding.heart.grey.icon 
             |requests
     //- +cloud filter='request'
     .ui.relaxed.grey.list.smallscroll
