--- a/components/service.jade
+++ b/components/service.jade
@@ -197,9 +197,9 @@ template(name='service_cloud')
 template(name='service_small')
     div
     a.ui.fluid.button(href="/services")
-        .ui.inline.header
+        .ui.inline.grey.header
             //- +i name='work'
-            //- i.wrench.grey.icon
+            i.concierge.bell.grey.icon
             |services
     //- +service_cloud filter='service'
     .ui.relaxed.list.smallscroll
