--- a/client/fields.jade
+++ b/client/fields.jade
@@ -144,7 +144,7 @@ template(name='image_view')
         //-     |#{key}
         //- else
         //-     |#{this}
-        img.ui.centered.rounded.large.image(src="{{c.url field_value gravity='face' crop='fit'}}" class=classes)
+        img.ui.centered.rounded.image(src="{{c.url field_value gravity='face' crop='fit'}}" class=classes)
         //- a(href="{{c.url field_value gravity='face' crop='fit'}}")
         //-     |download
     //- +call_visual
@@ -894,7 +894,7 @@ template(name='boolean_edit')
 
 template(name='boolean_view')
     div
-    .ui.inline.grey.header
+    .ui.inline.grey.small.header
         if icon
             i.grey.icon(class=icon)
             //- +i name=icon classes='ui inline mini image'
@@ -993,7 +993,7 @@ template(name='multi_doc_view')
     if field_value
         .ui.inline.header(title=key)
             |#{title} #{label}
-        each field_value
+        each sorted_field_values
             .ui.large.basic.label
                 |#{this}
 
