--- a/client/styles.css
+++ b/client/styles.css
@@ -1,9 +1,9 @@
 body {
     /* font-family: 'Raleway', sans-serif !important; */
     font-family: 'Ubuntu', sans-serif !important;
-    /* font-size: 110% !important; */
+    font-size: 110% !important;
     /*line-height: 200% !important;*/
-    background: rgba(0,0,0,.03) !important;
+    background: rgba(0,0,0,.01) !important;
     /* filter: invert(.9) !important; */
     /* background: rgba(200, 200, 200, .1) !important */
     /* background: #0e0e44 !important; */
@@ -65,6 +65,9 @@ body {
 .menu > .item {
     border-radius:5px !important;
 }
+.ui.popup {
+    border-radius:10px !important;
+}
 /* .menu > .item:hover { */
     /* filter: drop-shadow(0px 0px 5px rgba(100,100,100,.9)) !important; */
 /* } */
@@ -74,7 +77,7 @@ body {
 .grid_seg:focus-visible {
     outline: lightgreen solid 2px !important;
     filter: drop-shadow(2px 2px 5px rgba(200,200,200,.7)) !important;
-    transform: scale(1.1) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.05) !important;
 }
 
 .menu {
@@ -99,8 +102,9 @@ body {
     /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
 }
 .zoom:hover {
-    filter: drop-shadow(2px 2px 5px rgba(200,200,200,.7)) !important;
-    transform: scale(1.5) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    box-shadow: inset 0px 0px 10px 10px rgba(250,250,250,0.8);
+    /* filter: drop-shadow(0px 0px 5px 5px rgba(200,200,200,.7)) !important; */
+    transform: scale(1.3) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
     z-index:1000 !important;
 }
 
@@ -421,7 +425,7 @@ input.username_search{
     /* animation: fadeout 1s; */
 }
 .global_container {
-    padding-left:10px !important;
+    padding-left:5px !important;
 }
 
 .spinning{
