--- a/client/styles.css
+++ b/client/styles.css
@@ -83,8 +83,7 @@ body {
 /* } */
 .menu > .item > .image:hover {
     filter: drop-shadow(0px 0px 5px rgba(250,250,250,.9)) !important;
-    -webkit-transform: rotate(20deg);
-    transform: rotate(20deg);
+    transform: rotate(20deg) scale(1.3);
 }
 
 .image {
@@ -102,7 +101,7 @@ body {
 
 .menu {
     border-radius: 10px !important;
-    transition: all 5s ease !important;
+    transition: all 1s ease !important;
 
 }
 
@@ -189,10 +188,10 @@ body {
 }} */
 
 .home_segment{
-    -webkit-transition: all 0.25s ease;
-    -moz-transition: all 0.25s ease;
-    -o-transition: all 0.25s ease;
-    transition: all 0.25s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
     border-radius: 10px !important;
     margin: 0px !important;
 }
@@ -815,8 +814,8 @@ h1.ui.header{
 	overflow-x:scroll;
 	/*max-height:1000px;*/
 	/*max-height:85vh;*/
-    transition: background-color 5s; /* Animation */
-    transition: src 5s; /* Animation */
+    transition: background-color 1s; /* Animation */
+    transition: height 1s; /* Animation */
     /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
 
     background-color: (250,250,250,.1) !important;
