--- a/components/profile/profile.jade
+++ b/components/profile/profile.jade
@@ -26,7 +26,8 @@ template(name='user_layout')
                     if user_is_resident
                         if is_staff
                             a.ui.big.button.item(href="/user/#{user_from_username_param.username}/edit")
-                                i.cog.icon
+                                //- i.cog.icon
+                                +i name='setting' 
                                 |edit
                             +resident_info         
                             +user_check_steps
@@ -35,11 +36,13 @@ template(name='user_layout')
                             .ui.small.header #{tagline}
                     if is_current_user
                         a.ui.large.button.item(href="/user/#{user_from_username_param.username}/edit" title='profile settings')
-                            i.cog.icon
+                            +i name='setting' 
+                            //- i.cog.icon
                             |edit
                     else if is_admin
                         a.ui.large.button.item(href="/user/#{user_from_username_param.username}/edit" title='profile settings')
-                            i.cog.icon
+                            +i name='setting' 
+                            //- i.cog.icon
                             |edit
                     if is_dev
                         +boolean_edit key='disabled' label='disabled' icon='user shield' direct='true'
@@ -48,15 +51,17 @@ template(name='user_layout')
                     //-         +i name='envelope'
                     if is_current_user
                         a.ui.large.button.logout(href="#" title='logout')
-                            i.sign.out.alternate.icon
+                            //- i.sign.out.alternate.icon
+                            +i name='exit' 
                             |log out
                         a.ui.large.button.logout_other_clients(href="#" title='logout other clients')
-                            i.globe.icon
+                            //- i.globe.icon
+                            +i name='globe' 
                             |log out other clients
                     if is_admin
                         .ui.basic.segment
                             .ui.header 
-                                i.user.shield.icon
+                                +i name='shield'
                                 |roles
                             each roles
                                 .ui.basic.label #{this}
